Version 1.1
 - Fixed Command Class Recieved Message Counter when we are handling a
   MultiInstanceMessageEncap Message (Justin)
 - Fixed Issue 310 - Unbalanced Lock/Release in Manager::IsNodeFailed and
   Manager::GetNodeQueryStage (Justin)
 - For Sleeping Devices - Do Not automatically add WakeUp Class to these
   devices if they advertise themselves as FrequentListening. This matches
   the Logic in the QueryStage functions where we skip querying the Device
   for Wakeup Configuration if its set as FLiRS. Needs some testing (Justin)
 - Options.xml file can now live in both the System Config Path
   (/etc/openzwave for example) or the Local Application Path. Local
   Options.xml will override any System Options.xml (Justin)
 - Updated the Include Paths so we only have to specify the top level src
   directory for GCC, and the rest of the headers are specified as subdirs.
   Based on work started by Svente Karisson (Justin)
 - A few fixes for Windows Calls and various casts required to eliminate
   warnings (Svente Karisson)
 - Add a Error String if we fail to parse our Options.xml files (Justin)
